# sistema-cupcakes

./: README.md  cupcakes.db  index.html  main.py  pyproject.toml
